--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "npm run start --prefix server",
     "client": "npm run start --prefix client",
     "dev": "concurrently -t \"HH:mm:ss\" --names \"SERVER,CLIENT\" -c \"bgYellow.bold,bgBlue.bold\" --prefix \"[{name} {time}]\" \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NODE_ENV_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NODE_ENV_PRODUCTION=false npm install --prefix server && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [
     "Germanos",
