--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "sourceMap": true,
+  "homepage": "https://calm-harbor-75556.herokuapp.com/",
   "proxy": {
     "/auth/google": {
       "target": "http://localhost:5000"
