--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "axios": "^0.16.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-dropzone": "^4.1.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.72.0",
+    "superagent": "^3.6.0",
     "typeface-roboto": "0.0.35"
   },
   "scripts": {
