--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node server/index.js",
-    "server": "npm run start --prefix server",
+    "server": "nodemon ./server/index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently -t \"HH:mm:ss\" --names \"SERVER,CLIENT\" -c \"bgYellow.bold,bgBlue.bold\" --prefix \"[{name} {time}]\" \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NODE_ENV_PRODUCTION=false npm install --prefix server && npm install --prefix client && npm run build --prefix client"
