--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "crypto": "^1.0.1",
     "express": "^4.15.4",
-    "mongoose": "^4.11.10"
+    "json-stringify-safe": "^5.0.1",
+    "lodash": "^4.17.4",
+    "mongoose": "^4.11.10",
+    "multer": "^1.3.0",
+    "xlsx": "^0.11.3"
   }
 }
