--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cookie-session": "^1.3.2",
     "crypto": "^1.0.1",
     "express": "^4.15.4",
     "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.10",
     "multer": "^1.3.0",
+    "nodemailer": "^4.1.3",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "xlsx": "^0.11.3"
   }
 }
