--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "license": "ISC",
   "dependencies": {
     "concurrently": "^3.5.0",
+    "connect-ensure-login": "^0.1.1",
     "nodemon": "^1.12.0"
   }
 }
