--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^4.1.3",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "xlsx": "^0.11.3"
   }
 }
