--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "cookie-session": "^1.3.2",
     "crypto": "^1.0.1",
     "express": "^4.15.4",
+    "express-session": "^1.15.6",
     "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.10",
