--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.1.2",
+    "react-file-download": "^0.3.5",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
