--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bcrypt": "^1.0.3",
     "nodemailer": "^4.1.0",
     "prop-types": "^15.6.0",
     "react": "^15.6.1",
