--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cookie-session": "^1.3.2",
     "crypto": "^1.0.1",
     "express": "^4.15.4",
+    "express-force-https": "^1.0.0",
     "express-session": "^1.15.6",
     "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.4",
