--- a/package.json
+++ b/package.json
@@ -33,6 +33,44 @@
   "dependencies": {
     "concurrently": "^3.5.0",
     "connect-ensure-login": "^0.1.1",
-    "nodemon": "^1.12.0"
+    "nodemon": "^1.12.0",
+
+    "axios": "^0.16.2",
+    "bcrypt": "^1.0.3",
+    "nodemailer": "^4.1.0",
+    "prop-types": "^15.6.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-dropzone": "^4.1.2",
+    "react-file-download": "^0.3.5",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.13",
+    "redux": "^3.7.2",
+    "redux-form": "^7.1.2",
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.72.0",
+    "superagent": "^3.6.0",
+    "typeface-roboto": "0.0.35",
+    "xlsx-style": "^0.8.13",
+
+    "bcrypt": "^1.0.3",
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^1.3.2",
+    "crypto": "^1.0.1",
+    "express": "^4.15.4",
+    "express-force-https": "^1.0.0",
+    "express-session": "^1.15.6",
+    "json-stringify-safe": "^5.0.1",
+    "lodash": "^4.17.4",
+    "mongoose": "^4.11.10",
+    "multer": "^1.3.0",
+    "nodemailer": "^4.1.3",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "xlsx": "^0.11.3"
   }
 }
